UPDATED:  Removed suffix `Description.` in product_detail page

--- a/mysite/myapp/templates/myapp/product_detail.html
+++ b/mysite/myapp/templates/myapp/product_detail.html
@@ -10,7 +10,7 @@
             <div class="flex mt-5">Product Price:
                 <div class="text-green-500 ml-2">${{ product.price }}</div>
             </div>
-            <div class="mt-5 text-gray-700">Description: {{ product.desc }} Description.</div>
+            <div class="mt-5 text-gray-700">Description: {{ product.desc }}</div>
         </div>
     </div>
     
