--- a/mysite/users/templates/users/register.html
+++ b/mysite/users/templates/users/register.html
@@ -19,19 +19,19 @@
                     {{ form.email }}
                 </div>
                 
-                <label class="block text-gray-700 text-lg font-bold mb-2" for="">password</label>
+                <label class="block text-gray-700 text-lg font-bold mb-2" for="">Password</label>
                 <div class="shadow apprearance-none border rounded py-2 px-3 mr-10 text-gray-700 ">
                     {{ form.password1 }}
                 </div>
 
-                <label class="block text-gray-700 text-lg font-bold mb-2" for="">password again</label>
+                <label class="block text-gray-700 text-lg font-bold mb-2" for="">Confirm Password</label>
                 <div class="shadow apprearance-none border rounded py-2 px-3 mr-10 text-gray-700 ">
                     {{ form.password2 }}
                 </div>
-            </div>
-
-            <div class="mb-2 mt-5 mx-10">
-                <button class="bg-green-500 text-white px-5 py-2" type="submit">Register</button>
+                
+                <div class="mb-2 mt-5">
+                    <button class="bg-green-500 text-white px-5 py-2" type="submit">Register</button>
+                </div>
             </div>
         </form>
     </div>    
